<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/menu1"
        app:layout_constraintVertical_bias="0.54"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

    <TextView
        android:id="@+id/intro1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:gravity="center"
        android:text="@string/intro1"
        android:fontFamily="@font/clashdisplay_semibold"
        android:textSize="25sp"
        android:textColor="@color/n00"
        app:layout_constraintBottom_toTopOf="parent"/>

    <TextView
        android:id="@+id/desc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/clashdisplay_medium"
        android:gravity="center"
        android:text="@string/desc1"
        android:textColor="@color/n80"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoMenu1"/>

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:alpha="0"
        android:src="@drawable/menu21"
        app:layout_constraintStart_toEndOf="parent"/>

    <TextView
        android:id="@+id/intro2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:gravity="center"
        android:text="@string/intro2"
        android:fontFamily="@font/clashdisplay_semibold"
        android:textSize="25sp"
        android:textColor="@color/n00"
        app:layout_constraintBottom_toTopOf="@id/logoMenu2"
        app:layout_constraintStart_toEndOf="parent"/>

    <TextView
        android:id="@+id/desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/desc2"
        android:textSize="16sp"
        android:textColor="@color/n80"
        android:fontFamily="@font/clashdisplay_medium"
        app:layout_constraintTop_toBottomOf="@id/logoMenu2"
        app:layout_constraintStart_toEndOf="parent"/>

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:alpha="0"
        android:src="@drawable/menu21"
        app:layout_constraintStart_toEndOf="parent"/>

    <TextView
        android:id="@+id/intro3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/clashdisplay_semibold"
        android:gravity="center"
        android:text="@string/intro3"
        android:textColor="@color/n00"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/logoMenu3"
        app:layout_constraintEnd_toEndOf="@id/logoMenu3"
        app:layout_constraintStart_toEndOf="@id/logoMenu3" />

    <TextView
        android:id="@+id/desc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/desc3"
        android:textSize="13sp"
        android:textColor="@color/n80"
        android:fontFamily="@font/clashdisplay_medium"
        app:layout_constraintTop_toBottomOf="@id/logoMenu3"
        app:layout_constraintStart_toEndOf="parent"/>


    <ImageView
        android:id="@+id/leaf1"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:rotation="90"
        android:src="@drawable/leaf1"
        tools:layout_editor_absoluteX="527dp" />
    <!--        tools:layout_editor_absoluteX="268dp"-->
    <!--        tools:layout_editor_absoluteY="127dp"-->


    <!--    tools:layout_editor_absoluteX="55dp"-->
    <!--    tools:layout_editor_absoluteY="539dp"-->


    <ImageView
        android:id="@+id/leaf2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:rotation="50"
        android:src="@drawable/leaf2"
        app:layout_constraintStart_toEndOf="parent"
        tools:layout_editor_absoluteY="560dp" />

    <ImageView
        android:id="@+id/leaf3"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/leaf3"
        app:layout_constraintStart_toEndOf="parent"
        />


</androidx.constraintlayout.motion.widget.MotionLayout>